# ipx

./: .gitignore  README.md  index.html  public_key.gpg  pyproject.toml
dists/stable/: InRelease  Release  Release.gpg  md5sums.tmp  sha1sums.tmp  sha256sums.tmp  sha512sums.tmp
ipx/: utils.py
ipx.egg-info/: SOURCES.txt  requires.txt
pool/: ipx_0.1.0_all.deb
pool/main/i/ipx/: ipx_0.1.0.deb
tests/: test_main.py
