[project]
name = "ipx"
version = "0.1.0"
description = "Modern IP subnet calculator with Rich CLI output for cybersecurity professionals"
authors = [{ name = "Dolan", email = "0xdolan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "typer>=0.9.0",
]

[project.scripts]
ipx = "ipx.main:app"

[tool.setuptools]
packages = ["ipx"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

